update for pkg name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-hello-package",
+  "name": "@jbgitmine/npm-hello-package",
   "version": "1.0.0",
   "description": "",
   "type": "module",
